--- a/common_services/cone_ear/src/main/resources/cone.properties
+++ b/common_services/cone_ear/src/main/resources/cone.properties
@@ -80,18 +80,27 @@ escidoc.cone.modelsxml.path=${escidoc.cone.modelsxml.path}
 escidoc.common.presentation.url=${escidoc.common.presentation.url}
 
 # Properties for common standard theme
+# Default is "/common/resources/cssFramework/themes/skin_blue/styles/theme.css"
 escidoc.common.stylesheet.standard.url=${escidoc.common.stylesheet.standard.url}
+# Is either "stylesheet" or "alternate stylesheet". Exactly ONE "stylesheet" must be given.
 escidoc.common.stylesheet.standard.type=${escidoc.common.stylesheet.standard.type}
+# Is either "true" or "false". If false, this skin is not taken into account.
 escidoc.common.stylesheet.standard.apply=${escidoc.common.stylesheet.standard.apply}
 
 # Properties for common contrast theme
+# Default is "/common/resources/cssFramework/themes/skin_highContrast/styles/theme.css"
 escidoc.common.stylesheet.contrast.url=${escidoc.common.stylesheet.contrast.url}
+# Is either "stylesheet" or "alternate stylesheet". Exactly ONE "stylesheet" must be given.
 escidoc.common.stylesheet.contrast.type=${escidoc.common.stylesheet.contrast.type}
+# Is either "true" or "false". If false, this skin is not taken into account.
 escidoc.common.stylesheet.contrast.apply=${escidoc.common.stylesheet.contrast.apply}
 
 # Properties for common classic theme
+# Default is "/common/resources/cssFramework/themes/skin_classic/styles/theme.css"
 escidoc.common.stylesheet.classic.url=${escidoc.common.stylesheet.classic.url}
+# Is either "stylesheet" or "alternate stylesheet". Exactly ONE "stylesheet" must be given.
 escidoc.common.stylesheet.classic.type=${escidoc.common.stylesheet.classic.type}
+# Is either "true" or "false". If false, this skin is not taken into account.
 escidoc.common.stylesheet.classic.apply=${escidoc.common.stylesheet.classic.apply}
 
 # AA local
