--- a/common_services/aa_logic/src/main/resources/auth.properties
+++ b/common_services/aa_logic/src/main/resources/auth.properties
@@ -24,19 +24,34 @@
 # Gesellschaft zur Förderung der Wissenschaft e.V.
 # All rights reserved. Use is subject to license terms.
 
-escidoc.aa.instance.url=${escidoc.aa.instance.url}
-escidoc.aa.default.target=${escidoc.aa.default.target}
-escidoc.aa.public.key.file=${escidoc.aa.public.key.file}
-escidoc.aa.private.key.file=${escidoc.aa.private.key.file}
-
-# URL of the FIZ framework instance
+# URL of the FIZ framework instance (used only with eSciDoc authentication)
 escidoc.framework_access.framework.url=${escidoc.framework_access.framework.url}
-# URL of the escidoc-core instance you like to logon to
+# URL of the escidoc-core instance you like to logon to (used only with eSciDoc authentication)
 escidoc.framework_access.login.url=${escidoc.framework_access.login.url}
 
-escidoc.aa.config.file=${escidoc.aa.config.file}
-escidoc.aa.ip.table=${escidoc.aa.ip.table}
+# AA local
+# URL to the AA module, default is "/auth/".
+escidoc.aa.instance.url=${escidoc.aa.instance.url}
+# This should be set when multiple AA modules are used
+escidoc.aa.default.target=${escidoc.aa.default.target}
+# For a productive system, the key pair MUST be generated anew. If not, the system is unsafe.
+# Creating a pair of keys can be done with
+# de.mpg.escidoc.services.aa.crypto.KeyGenerator
+escidoc.aa.private.key.file=${escidoc.aa.private.key.file}
 
+# AA remote
+# For a productive system, the key pair MUST be generated anew. If not, the system is unsafe.
+# Creating a pair of keys can be done with
+# de.mpg.escidoc.services.aa.crypto.KeyGenerator
+escidoc.aa.public.key.file=${escidoc.aa.public.key.file}
+# An XML configuration that describes the used Authentication mechanism.
+# Default is "conf.xml" which points to a file in aa_presentation.war/WEB-INF/classes
+# To change the configuration, copy this file to a different location and change the property to it.
+escidoc.aa.config.file=${escidoc.aa.config.file}
+# When the AA module is configured to work with the IP authentication, this file is used to identify valid IP adresses.
+# An example can be found at aa_presentation.war/WEB-INF/classes/ips.xml
+escidoc.aa.ip.table=${escidoc.aa.ip.table}
+# Depending on the type of authentication chosen, either one class is needed or two (e.g. with eSciDoc authentication).
 #escidoc.aa.client.class=de.mpg.escidoc.services.aa.web.client.IpAaClient
 escidoc.aa.client.start.class=${escidoc.aa.client.start.class}
 escidoc.aa.client.finish.class=${escidoc.aa.client.finish.class}
