--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -811,7 +811,12 @@
 			<type>war</type>
 			<scope>compile</scope>
 		</dependency>
-	
+		<dependency>
+			<groupId>commons-net</groupId>
+			<artifactId>commons-net</artifactId>
+			<version>3.0.1</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 	
 	<profiles>
