--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -273,8 +273,10 @@ escidoc.transformation.mab.content.url.prefix=${escidoc.transformation.mab.conte
 escidoc.transformation.edoc.stylesheet.filename=${escidoc.transformation.edoc.stylesheet.filename}
 escidoc.transformation.endnote.ice.stylesheet.filename=${escidoc.transformation.endnote.ice.stylesheet.filename}
 escidoc.transformation.endnote.stylesheet.filename=${escidoc.transformation.endnote.stylesheet.filename}
+escidoc.transformation.zfn.stylesheet.filename=${escidoc.transformation.zfn.stylesheet.filename}
 escidoc.transformation.endnote.configuration.filename=${escidoc.transformation.endnote.configuration.filename}
 escidoc.transformation.edoc.configuration.filename=${escidoc.transformation.edoc.configuration.filename}
+escidoc.transformation.zfn.configuration.filename=${escidoc.transformation.zfn.configuration.filename}
 escidoc.transformation.bibtex.configuration.filename=${escidoc.transformation.bibtex.configuration.filename}
 escidoc.transformation.mab.stylesheet.filename=${escidoc.transformation.mab.stylesheet.filename}
 escidoc.transformation.report.sortorder.filename=${escidoc.transformation.report.sortorder.filename}
