--- a/pubman/pubman_presentation/pom.xml
+++ b/pubman/pubman_presentation/pom.xml
@@ -98,6 +98,12 @@
 			<version>1.2.6</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>commons-net</groupId>
+			<artifactId>commons-net</artifactId>
+			<version>3.0.1</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 	
 </project>
