--- a/common_services/transformation/src/test/resources/pubman.properties
+++ b/common_services/transformation/src/test/resources/pubman.properties
@@ -12,6 +12,7 @@ escidoc.cone.service.url=${escidoc.cone.service.url}
 escidoc.transformation.edoc.stylesheet.filename=${escidoc.transformation.edoc.stylesheet.filename}
 escidoc.transformation.endnote.ice.stylesheet.filename=${escidoc.transformation.endnote.ice.stylesheet.filename}
 escidoc.transformation.endnote.stylesheet.filename=${escidoc.transformation.endnote.stylesheet.filename}
+escidoc.transformation.zfn.stylesheet.filename=${escidoc.transformation.zfn.stylesheet.filename}
 escidoc.transformation.endnote.configuration.filename=${escidoc.transformation.endnote.configuration.filename}
 escidoc.transformation.mab.stylesheet.filename=${escidoc.transformation.mab.stylesheet.filename}
 escidoc.transformation.edoc.configuration.filename=${escidoc.transformation.edoc.configuration.filename}
