--- a/common_services/transformation/src/test/resources/transformation.properties
+++ b/common_services/transformation/src/test/resources/transformation.properties
@@ -7,7 +7,8 @@ escidoc.cone.service.url=${escidoc.cone.service.url}
 
 # Transformation stylesheets
 escidoc.transformation.edoc.stylesheet.filename=${escidoc.transformation.edoc.stylesheet}
-escidoc.transformation.endnote.ice.stylesheet.filename=${escidoc.transformation.endnote.ice.stylesheet.filename}
+escidoc.transformation.endnote.ice.stylesheet.filename=${escidoc.transformation.endnote.zfn.filename}
+escidoc.transformation.zfn.stylesheet.filename=${escidoc.transformation.endnote.ice.stylesheet.filename}
 escidoc.transformation.endnote.stylesheet.filename=${escidoc.transformation.endnote.stylesheet.filename}
 escidoc.transformation.mab.stylesheet.filename=${escidoc.transformation.mab.stylesheet.filename}
 escidoc.transformation.report.sortorder.filename=${escidoc.transformation.report.sortorder.filename}
