--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -24,24 +24,21 @@
 # Gesellschaft zur Förderung der Wissenschaft e.V.
 # All rights reserved. Use is subject to license terms.
 
-# Flag to disable the GUI-entry points for UC_PM_SR_03 do advanced search
-escidoc.pubman_presentation.disable.advanced_search=${escidoc.pubman_presentation.disable.advanced_search}
-escidoc.pubman_presentation.disable.export=${escidoc.pubman_presentation.disable.export}
-escidoc.pubman_presentation.disable.modify=${escidoc.pubman_presentation.disable.modify}
-escidoc.pubman_presentation.disable.new_revision=${escidoc.pubman_presentation.disable.new_revision}
-escidoc.pubman_presentation.disable.view_statistics=${escidoc.pubman_presentation.disable.view_statistics}
-escidoc.pubman_presentation.disable.view_revisions=${escidoc.pubman_presentation.disable.view_revisions}
-
+# Email configuration for SMTP server
 escidoc.pubman_presentation.email.mailservername=${escidoc.pubman_presentation.email.mailservername}
 escidoc.pubman_presentation.email.sender=${escidoc.pubman_presentation.email.sender}
 escidoc.pubman_presentation.email.withauthentication=${escidoc.pubman_presentation.email.withauthentication}
 escidoc.pubman_presentation.email.authenticationuser=${escidoc.pubman_presentation.email.authenticationuser}
 escidoc.pubman_presentation.email.authenticationpwd=${escidoc.pubman_presentation.email.authenticationpwd}
 
+# In the view item page the list of creators is hidden after this number of entries
 escidoc.pubman_presentation.viewFullItem.defaultSize=${escidoc.pubman_presentation.viewFullItem.defaultSize}
 
-# URL of this PubMan instance
+# URL of this PubMan instance. This should contain the URL of the server including protocol and port,
+# e.g. http://www.example.com
 escidoc.pubman.instance.url=${escidoc.pubman.instance.url}
+
+# The context path
 escidoc.pubman.instance.context.path=${escidoc.pubman.instance.context.path}
 escidoc.pubman.item.pattern=${escidoc.pubman.item.pattern}
 escidoc.pubman.component.pattern=${escidoc.pubman.component.pattern}
@@ -317,3 +314,11 @@ escidoc.aa.ip.table=${escidoc.aa.ip.table}
 #escidoc.aa.client.class=de.mpg.escidoc.services.aa.web.client.IpAaClient
 escidoc.aa.client.start.class=${escidoc.aa.client.start.class}
 escidoc.aa.client.finish.class=${escidoc.aa.client.finish.class}
+
+# Flag to disable the GUI-entry points for UC_PM_SR_03 do advanced search
+escidoc.pubman_presentation.disable.advanced_search=${escidoc.pubman_presentation.disable.advanced_search}
+escidoc.pubman_presentation.disable.export=${escidoc.pubman_presentation.disable.export}
+escidoc.pubman_presentation.disable.modify=${escidoc.pubman_presentation.disable.modify}
+escidoc.pubman_presentation.disable.new_revision=${escidoc.pubman_presentation.disable.new_revision}
+escidoc.pubman_presentation.disable.view_statistics=${escidoc.pubman_presentation.disable.view_statistics}
+escidoc.pubman_presentation.disable.view_revisions=${escidoc.pubman_presentation.disable.view_revisions}
