--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -178,7 +178,7 @@ escidoc.search.and.export.default.sort.order=${escidoc.search.and.export.default
 escidoc.search.and.export.start.record=${escidoc.search.and.export.start.record}
 escidoc.search.and.export.maximum.records=${escidoc.search.and.export.maximum.records}
 
-#Path to the model.xml file
+#Path to the CoNE model.xml file
 escidoc.cone.modelsxml.path=${escidoc.cone.modelsxml.path}
 
 # CoNE RDFS template
@@ -194,8 +194,8 @@ escidoc.import.database.user.password=${escidoc.import.database.user.password}
 escidoc.import.database.connection.url=${escidoc.import.database.connection.url}
 escidoc.import.task.content-model=${escidoc.import.task.content-model}
 
+# Import surveyor checks regularly if there are unfinished bach imports
 escidoc.import.surveyor.interval=${escidoc.import.surveyor.interval}
-
 
 #CoNE Maximum number of returned result sets
 escidoc.cone.maximum.results=${escidoc.cone.maximum.results}
@@ -241,12 +241,14 @@ escidoc.pubman.statistics.nims.context.ids =${escidoc.pubman.statistics.nims.con
 escidoc.pubman.favicon.apply=${escidoc.pubman.favicon.apply}
 escidoc.pubman.favicon.url=${escidoc.pubman.favicon.url}
 
-<!-- version of the pubman cookie (has to be changed if style information is changed)-->
+# version of the pubman cookie (has to be changed if style information is changed)
 escidoc.pubman.cookie.version=${escidoc.pubman.cookie.version}
 
+# A semicolon separated list of vocabulary names that should be displayed in the "Browse by" section
+# Default is "ddc;iso639-3"
 escidoc.cone.subjectVocab=${escidoc.cone.subjectVocab}
                                                                     
-<!-- PID cache -->
+# PID cache
 escidoc.pidcache.cache.size.max=${escidoc.pidcache.cache.size.max}
 escidoc.pidcache.refresh.interval=${escidoc.pidcache.refresh.interval}
 escidoc.pidcache.dummy.url=${escidoc.pidcache.dummy.url}
@@ -279,6 +281,7 @@ escidoc.transformation.mab.stylesheet.filename=${escidoc.transformation.mab.styl
 escidoc.transformation.report.sortorder.filename=${escidoc.transformation.report.sortorder.filename}
 
 escidoc.report.indesign.namespace=${escidoc.report.indesign.namespace}
+
 
 escidoc.pubman.genres.configuration=${escidoc.pubman.genres.configuration}
 
