--- a/common_services/cone_ear/src/main/resources/cone.properties
+++ b/common_services/cone_ear/src/main/resources/cone.properties
@@ -27,8 +27,8 @@
 # CoNE service URL
 #
 # The URL the CoNE homepage should be reached at.
-# Looks like "http://www.example.com/cone/"
-# localhost should only be used in development environments
+# Looks like "http://www.example.com/cone/".
+# localhost should only be used in development environments.
 escidoc.cone.service.url=${escidoc.cone.service.url}
 
 # Control of Named Entities database interface class implementing the de.mpg.escidoc.services.cone.Querier interface
@@ -54,7 +54,7 @@ escidoc.cone.rdf.path=${escidoc.cone.rdf.path}
 escidoc.cone.language.default=${escidoc.cone.language.default}
 
 # CoNE database configuration (for SQLQuerier and OracleQuerier)
-# JDBC Driver class
+# JDBC Driver class, e.g. "org.postgresql.Driver" for PostgreSQL
 escidoc.cone.database.driver.class=${escidoc.cone.database.driver.class}
 # Database server name. Can be set to localhost if on the same machine
 escidoc.cone.database.server.name=${escidoc.cone.database.server.name}
@@ -107,16 +107,19 @@ escidoc.common.stylesheet.classic.apply=${escidoc.common.stylesheet.classic.appl
 # URL to the AA module, default is "/auth/".
 escidoc.aa.instance.url=${escidoc.aa.instance.url}
 # This should be set when multiple AA modules are used
+# Default is "http://localhost:8080/auth/clientLogin"
 escidoc.aa.default.target=${escidoc.aa.default.target}
 # For a productive system, the key pair MUST be generated anew. If not, the system is unsafe.
 # Creating a pair of keys can be done with
 # de.mpg.escidoc.services.aa.crypto.KeyGenerator
+# Default is "private.key", that points to aa_presentation.war/WEB-INF/classes/private.key (for development only).
 escidoc.aa.private.key.file=${escidoc.aa.private.key.file}
 
 # AA remote
 # For a productive system, the key pair MUST be generated anew. If not, the system is unsafe.
 # Creating a pair of keys can be done with
 # de.mpg.escidoc.services.aa.crypto.KeyGenerator
+# Default is "public.key", that points to aa_presentation.war/WEB-INF/classes/public.key (for development only).
 escidoc.aa.public.key.file=${escidoc.aa.public.key.file}
 # An XML configuration that describes the used Authentication mechanism.
 # Default is "conf.xml" which points to a file in aa_presentation.war/WEB-INF/classes
