Resolved [PUBMAN-2196]: It's not possible to choose a sharing group for restricted files
GrantList.java and UserGroupList.java adjusted to the new SearchRetrieve responses implying the Grant- and UserGroup- Objects

XmlTransformingBean.java: functions for GrantList and UserGroupList added

pom.xml: Developer added

--- a/common_services/pom.xml
+++ b/common_services/pom.xml
@@ -166,6 +166,16 @@
 			<organization>Max Planck Digital Library</organization>
 			<timezone>+2</timezone>
 		</developer>
+		<developer>
+			<id>walter</id>
+			<name>Matthias Walter</name>
+			<email>walter@mpdl.mpg.de</email>
+			<roles>
+				<role>Software developer</role>
+			</roles>
+			<organization>Max Planck Digital Library</organization>
+			<timezone>+2</timezone>
+		</developer>
 	</developers>
 
 	<mailingLists>
