--- a/common_services/fledgeddata_presentation/pom.xml
+++ b/common_services/fledgeddata_presentation/pom.xml
@@ -59,5 +59,10 @@
 			<version>1.0.0-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
+				<dependency>
+			<groupId>saxon</groupId>
+			<artifactId>saxon-dom</artifactId>
+			<version>8.7</version>
+		</dependency>
 	</dependencies>
 </project>
