cargo-maven-plugin 12.: installDir replaced with downloadDir and extractDir
Former-commit-id: 614d243ca71f3dd553cd2a3d753c1a1fea7da27a

--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -921,12 +921,12 @@
 							</execution>
 						</executions>
 						<configuration>
-							<wait>false</wait>
 							<container>
 								<containerId>jboss42x</containerId>
 								<zipUrlInstaller>
 									<url>${cargo.jboss.url}</url>
-									<installDir>${cargo.install.dir}</installDir>
+									<downloadDir>${cargo.install.dir}</downloadDir>
+									<extractDir>${cargo.install.dir}</extractDir>
 								</zipUrlInstaller>
 							</container>
 							<configuration>
