sources.xml bug (failed tests) resolved

--- a/common_services/dataacquisition/src/main/resources/common.properties
+++ b/common_services/dataacquisition/src/main/resources/common.properties
@@ -4,3 +4,6 @@ escidoc.cone.service.url=${escidoc.cone.service.url}
 
 escidoc.dataacquisition.service.url=${escidoc.dataacquisition.service.url}
 #escidoc.dataacquisition.service.url=http://dev-pubman.mpdl.mpg.de/dataacquisition/
+
+#Path to the sources.xml file
+escidoc.import.sources.xml=${escidoc.import.sources.xml}
