--- a/common_services/dataacquisition_ear/src/main/resources/common.properties
+++ b/common_services/dataacquisition_ear/src/main/resources/common.properties
@@ -39,3 +39,5 @@ escidoc.cone.modelsxml.path=${escidoc.cone.modelsxml.path}
 
 escidoc.cone.mimetype.pattern=${escidoc.cone.mimetype.pattern}
 
+#Path to the sources.xml file
+escidoc.import.sources.xml=${escidoc.import.sources.xml}
