sources.xml bug resolved
Former-commit-id: 7fb9df69b0d76de0afc015f2be466f00cb50782a

--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -549,6 +549,9 @@
 		
 		<escidoc.cone.mimetype.pattern>application/vnd.cone-(.+)</escidoc.cone.mimetype.pattern>
 		
+		<!-- import-source -->
+		<escidoc.import.sources.xml>resources/sources.xml</escidoc.import.sources.xml>
+		
 		<!-- Import database -->
 		<escidoc.import.database.driver.class>org.hsqldb.jdbcDriver</escidoc.import.database.driver.class>
 		<escidoc.import.database.server.name />
