--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -325,3 +325,6 @@ escidoc.pubman_presentation.disable.modify=${escidoc.pubman_presentation.disable
 escidoc.pubman_presentation.disable.new_revision=${escidoc.pubman_presentation.disable.new_revision}
 escidoc.pubman_presentation.disable.view_statistics=${escidoc.pubman_presentation.disable.view_statistics}
 escidoc.pubman_presentation.disable.view_revisions=${escidoc.pubman_presentation.disable.view_revisions}
+
+#Path to the sources.xml file
+escidoc.import.sources.xml=${escidoc.import.sources.xml}
