--- a/pubman/pubman_presentation/src/main/resources/pubman.properties
+++ b/pubman/pubman_presentation/src/main/resources/pubman.properties
@@ -75,3 +75,6 @@ escidoc.pubman.external.organisation.id=${escidoc.pubman.external.organisation.i
 cone.querier.class=${cone.querier.class}
 
 escidoc.cone.subjectVocab=${escidoc.cone.subjectVocab}
+
+#Path to the sources.xml file
+escidoc.import.sources.xml=${escidoc.import.sources.xml}
