new workspaces xmlns:ns2="http://www.loc.gov/zing/cql/xcql/" xmlns:ns3="http://www.loc.gov/zing/srw/diagnostic/" added; removed syntactilly wrong snippets in request

--- a/common_services/reporting/src/main/resources/reporting.properties
+++ b/common_services/reporting/src/main/resources/reporting.properties
@@ -1,8 +1,7 @@
 #FHI report
 # see for indexes: http://coreservice.mpdl.mpg.de/ir/items?operation=explain 
 FHI.query=(\
-"/properties/context/id"=escidoc:23049\
-%20or%20"/properties/context/id"=escidoc:644575\
+"/properties/context/id"=${escidoc.framework_access.context.id.test}\
 )\
 %20and%20(\
 "/md-records/md-record/publication/type"="http://purl.org/eprint/type/Book"\
@@ -14,10 +13,6 @@ FHI.query=(\
 "/properties/public-status"=released\
 %20or%20"/properties/public-status"=submitted\
 %20or%20"/properties/public-status"=pending\
-)\
-%20and%20(\
-"/md-records/md-record/publication/dateAccepted"<>""\
-%20or%20"/md-records/md-record/publication/dateSubmitted"<>""\
 )
 FHI.sort.by=%20sortby%20"/properties/created-by/id" 
 FHI.report.formats=pdf,rtf
