again with dateAccepted and dateSubmitted in request

--- a/common_services/reporting/src/main/resources/reporting.properties
+++ b/common_services/reporting/src/main/resources/reporting.properties
@@ -13,6 +13,10 @@ FHI.query=(\
 "/properties/public-status"=released\
 %20or%20"/properties/public-status"=submitted\
 %20or%20"/properties/public-status"=pending\
+)\
+%20and%20(\
+"/md-records/md-record/publication/dateAccepted">"0"\
+%20or%20"/md-records/md-record/publication/dateSubmitted">"0"\
 )
 FHI.sort.by=%20sortby%20"/properties/created-by/id" 
 FHI.report.formats=pdf,rtf
