finished sitemap creation

--- a/common_services/fledgeddata_presentation/src/main/resources/fds.properties
+++ b/common_services/fledgeddata_presentation/src/main/resources/fds.properties
@@ -1,5 +1,7 @@
 appname=Fledged Data Service
 
+baseURL=http://localhost:8080/fledgeddata
+
 oai.serviceUnavailable=false 
 #(Optional): Forces the server to return a SC_SERVICE_UNAVAILABLE code to inform the user that it is currently being worked on.
    
@@ -55,3 +57,6 @@ Identify.earliestDatestamp=[datetime stamp of earliest]
     
 Identify.deletedRecord=[no|transient|persistent] 
 #(Required): Text to use as the Identify verb's deletedRecord value.
+
+Sitemap.creationInterval=1440
+#How often the sitemap xml is updated in hours
