--- a/common_services/syndication_presentation/src/test/resources/pubman.properties
+++ b/common_services/syndication_presentation/src/test/resources/pubman.properties
@@ -16,4 +16,5 @@ escidoc.syndication.feeds.xml.path=${escidoc.syndication.feeds.xml.path}
 
 escidoc.syndication.service.url=${escidoc.syndication.service.url}
 
-
+# Content-Model for RSS and ATOM feeds
+esicdoc.syndication.feeds.content.model=${esicdoc.syndication.feeds.content.model}
