--- a/common_services/pom.xml
+++ b/common_services/pom.xml
@@ -626,6 +626,7 @@
 		<escidoc.syndication.maximum.records>50</escidoc.syndication.maximum.records>
 		<escidoc.syndication.ttl>0</escidoc.syndication.ttl>
 		<escidoc.syndication.feeds.xml.path>resources/feeds.xml</escidoc.syndication.feeds.xml.path>
+		<esicdoc.syndication.feeds.content.model>escidoc:2001</esicdoc.syndication.feeds.content.model>
 		
 		<!-- searchAndExport service -->
 		<escidoc.search.and.export.default.sql.query>escidoc.metadata=test and escidoc.content-model.objid=escidoc:persistent4</escidoc.search.and.export.default.sql.query>
