--- a/common_services/common_logic_ear/src/test/resources/log4j.properties
+++ b/common_services/common_logic_ear/src/test/resources/log4j.properties
@@ -26,14 +26,14 @@
 # Set root category priority to ERROR and set no appender
 log4j.rootLogger=INFO, MyConsoleAppender
 
-log4j.logger.test=INFO, MyConsoleAppender
+log4j.logger.test=DEBUG, MyConsoleAppender
 log4j.additivity.test=false
-log4j.logger.de.mpg.escidoc=INFO, MyConsoleAppender
+log4j.logger.de.mpg.escidoc=DEBUG, MyConsoleAppender
 log4j.additivity.de.mpg.escidoc=false
 
 log4j.appender.MyConsoleAppender=org.apache.log4j.ConsoleAppender
 log4j.appender.MyConsoleAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.MyConsoleAppender.layout.ConversionPattern=%-5p %m%n
+log4j.appender.MyConsoleAppender.layout.ConversionPattern=%-5p [%F] %m%n
 
 log4j.appender.MyFileAppender=org.apache.log4j.FileAppender
 log4j.appender.MyFileAppender.layout=org.apache.log4j.PatternLayout
