--- a/common_services/citationmanager_ear/src/test/resources/log4j.properties
+++ b/common_services/citationmanager_ear/src/test/resources/log4j.properties
@@ -36,4 +36,4 @@ log4j.appender.MyConsoleAppender=org.apache.log4j.ConsoleAppender
 # MyConsoleAppender uses PatternLayout.
 log4j.appender.MyConsoleAppender.layout=org.apache.log4j.PatternLayout
 #log4j.appender.MyConsoleAppender.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
-log4j.appender.MyConsoleAppender.layout.ConversionPattern=%-5p %m%n
+log4j.appender.MyConsoleAppender.layout.ConversionPattern=%-5p %F: %m%n
