--- a/common_services/dataacquisition/src/main/resources/log4j.properties
+++ b/common_services/dataacquisition/src/main/resources/log4j.properties
@@ -33,7 +33,7 @@ log4j.additivity.de.mpg.escidoc=false
 
 log4j.appender.MyConsoleAppender=org.apache.log4j.ConsoleAppender
 log4j.appender.MyConsoleAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.MyConsoleAppender.layout.ConversionPattern=%-5p %m%n
+log4j.appender.MyConsoleAppender.layout.ConversionPattern=%-5p %F: %m%n
 
 log4j.appender.MyFileAppender=org.apache.log4j.FileAppender
 log4j.appender.MyFileAppender.layout=org.apache.log4j.PatternLayout
