--- a/common_services/validation_ear/src/test/resources/log4j.properties
+++ b/common_services/validation_ear/src/test/resources/log4j.properties
@@ -28,7 +28,7 @@
 log4j.rootLogger=DEBUG
 
 log4j.logger.test=DEBUG, MyConsoleAppender
-log4j.logger.de.mpg.escidoc=INFO,MyConsoleAppender
+log4j.logger.de.mpg.escidoc=DEBUG,MyConsoleAppender
 
 # MyConsoleAppender is set to be a ConsoleAppender (writes to system console).
 log4j.appender.MyConsoleAppender=org.apache.log4j.ConsoleAppender
@@ -36,4 +36,4 @@ log4j.appender.MyConsoleAppender=org.apache.log4j.ConsoleAppender
 # MyConsoleAppender uses PatternLayout.
 log4j.appender.MyConsoleAppender.layout=org.apache.log4j.PatternLayout
 #log4j.appender.MyConsoleAppender.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
-log4j.appender.MyConsoleAppender.layout.ConversionPattern=%-5p %m%n
+log4j.appender.MyConsoleAppender.layout.ConversionPattern=%-5p [%F] %m%n
