--- a/pubman/pubman_logic_ear/src/test/resources/log4j.properties
+++ b/pubman/pubman_logic_ear/src/test/resources/log4j.properties
@@ -12,4 +12,4 @@ log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 
 # CONSOLE uses PatternLayout.
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
-log4j.appender.CONSOLE.layout.ConversionPattern=%-5p %m%n
+log4j.appender.CONSOLE.layout.ConversionPattern=%-5p [%F] %m%n
