--- a/common_services/transformation/src/test/resources/pubman.properties
+++ b/common_services/transformation/src/test/resources/pubman.properties
@@ -17,3 +17,5 @@ escidoc.transformation.endnote.configuration.filename=${escidoc.transformation.e
 escidoc.transformation.mab.stylesheet.filename=${escidoc.transformation.mab.stylesheet.filename}
 escidoc.transformation.edoc.configuration.filename=${escidoc.transformation.edoc.configuration.filename}
 escidoc.transformation.report.sortorder.filename=${escidoc.transformation.report.sortorder.filename}
+escidoc.transformation.marc.stylesheet.filename=${escidoc.transformation.marc.stylesheet.filename}
+escidoc.transformation.marc.configuration.filename=${escidoc.transformation.marc.configuration.filename}
