--- a/common_services/transformation/src/test/resources/transformation.properties
+++ b/common_services/transformation/src/test/resources/transformation.properties
@@ -12,6 +12,8 @@ escidoc.transformation.zfn.stylesheet.filename=${escidoc.transformation.endnote.
 escidoc.transformation.endnote.stylesheet.filename=${escidoc.transformation.endnote.stylesheet.filename}
 escidoc.transformation.mab.stylesheet.filename=${escidoc.transformation.mab.stylesheet.filename}
 escidoc.transformation.report.sortorder.filename=${escidoc.transformation.report.sortorder.filename}
+escidoc.transformation.marc.stylesheet.filename=${escidoc.transformation.marc.stylesheet.filename}
+escidoc.transformation.marc.configuration.filename=${escidoc.transformation.marc.configuration.filename}
 
 # InDesign namespace
 escidoc.report.indesign.namespace=${escidoc.report.indesign.namespace}
