--- a/common_services/transformation/src/main/resources/transformations/commonPublicationFormats/conf/bibtex.properties
+++ b/common_services/transformation/src/main/resources/transformations/commonPublicationFormats/conf/bibtex.properties
@@ -1,3 +1,3 @@
-configuration=CoNE=true,use-brackets-as-cone-indicator=false,OrganizationalUnit=MPI for Solar System Research
+configuration=CoNE=true,use-brackets-as-cone-indicator=no,OrganizationalUnit=MPI for Solar System Research
 CoNE=true,false
-use-brackets-as-cone-indicator=true,false
+use-brackets-as-cone-indicator=no,empty brackets,identifier and affiliation in brackets
