--- a/common_services/framework_access/pom.xml
+++ b/common_services/framework_access/pom.xml
@@ -39,9 +39,9 @@
   <name>framework_access</name>
   <version>1.0.61-SNAPSHOT</version>
   <scm>
-    <connection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/framework_access</connection>
-    <developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/framework_access</developerConnection>
-    <url>https://zim02.gwdg.de/repos/common/</url>
+    <connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/framework_access</connection>
+    <developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/framework_access</developerConnection>
+    <url>https://subversion.mpdl.mpg.de/repos/common/</url>
   </scm>
   <build>
     <plugins>
