--- a/common_services/pom.xml
+++ b/common_services/pom.xml
@@ -254,9 +254,9 @@
 	</modules>
 
 	<scm>
-		<connection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services</connection>
-		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services</developerConnection>
-		<url>https://zim02.gwdg.de/repos/common/trunk/common_services</url>
+		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services</connection>
+		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services</developerConnection>
+		<url>https://subversion.mpdl.mpg.de/repos/common/trunk/common_services</url>
 	</scm>
 
 	<repositories>
