--- a/common_services/syndication_ear/pom.xml
+++ b/common_services/syndication_ear/pom.xml
@@ -41,9 +41,9 @@
     <packaging>ear</packaging>
 
     <scm>
-        <connection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/syndication_ear</connection>
-        <developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/syndication_ear</developerConnection>
-        <url>https://zim02.gwdg.de/repos/common/</url>
+        <connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/syndication_ear</connection>
+        <developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/syndication_ear</developerConnection>
+        <url>https://subversion.mpdl.mpg.de/repos/common/</url>
     </scm>
 
     <build>
