subversion server updated
Former-commit-id: 8c60377b4eb387c41ef837fa6c57dde47544a4fa

--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -211,9 +211,9 @@
 	</modules>
 	
 	<scm>
-		<connection>scm:svn:https://zim02.gwdg.de/repos/pubman/trunk/pubman</connection>
-		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/pubman/trunk/pubman</developerConnection>
-		<url>https://zim02.gwdg.de/repos/pubman/</url>
+		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/trunk/pubman</connection>
+		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/trunk/pubman</developerConnection>
+		<url>https://subversion.mpdl.mpg.de/repos/pubman/</url>
 	</scm>
  	
 	<repositories>
